style.css
html {
    box-sizing: border-box;
    font-family: "Lexend Deca", sans-serif;
}

*, *::before, *::after {
    box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
    overflow: auto;
}

main {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.heading {
    text-align: center;
    margin-bottom: 50px;
    margin-top: 50px;
}

.heading h1 {
    margin-bottom: 0;
    font-size: 32px;
    color: green;

}

.heading p {
    margin-top: 0;
    font-size: 16px;
}

.pricing-wrapper {
    display: flex;
    justify-content: center;
    gap: 30px;
    margin-bottom: 50px;
}

.pricing-card {
    padding: 10px 50px 50px 50px;
    background-color: white;
    box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.15);
    border-radius: 25px;
    width: 280px;
}

.pricing-card h3 {
    text-align: center;
    font-size: 24px;
    color: green;
    display: inline-block;
    margin-bottom: auto;
}

.pricing-card ul {
    padding-left: 0;
    margin-bottom: 50px;
}

.pricing-card li {
    list-style-type: none;
    margin: 10px 0;
    border-top: 1px solid black;
    padding-top: 5px;
    padding-bottom: 3px;
    text-align: center;
}

.harga {
    font-size: 24px;
    font-weight: bold;
    text-align: center;
    margin: 50px 0;
}

.pricing-card button {
    width: 100%;
    height: 30px;
    background-color: greenyellow;
    border: none;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15)
}

@media screen and (max-width: 768px) {
    .pricing-wrapper {
        flex-direction: column;
        align-items: center;
        gap: 20px;
        margin-bottom: 150px;
    }

    .pricing-card {
        width: 300px;
        text-align: center;
    }


    body {
        overflow: auto;
    }

    main {
        height: auto;
        padding: 40px 0;
    }
}

@media screen and (max-width: 1024px) {
    .pricing-wrapper {
        flex-wrap: wrap;
    }

    main {
        height: auto;
        max-height: none;
        display: flex;
        padding: 50px 0;
    }
}

